--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg">
-            <div class="container">
+            <div class="container py-2">
                 <a class="navbar-brand fw-bold fs-3" href="#">Pro Edu</a>
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
@@ -48,6 +48,53 @@
             </div>
         </nav>
         <!-- Navbar End -->
+        <!-- Carousel Start -->
+        <section>
+            <div class="container">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="images/cover/cover-1.png" class="d-block img-fluid" alt="...">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Welcome to Digital Learning</h2>
+                                <p>Learning facilitated by technology that gives students some element of control over
+                                    time, place, path and pace.</p>
+                                <button class="btn btn-primary">Get Started</button>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/cover/cover-2.jpg" class="d-block img-fluid" alt="...">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Get Started Digital Learning</h2>
+                                <p>Learning facilitated by technology that gives students some element of control over
+                                    time, place, path and pace.</p>
+                                <button class="btn btn-primary">Get Started</button>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/cover/cover-3.jpg" class="d-block img-fluid" alt="...">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Get Started Digital Learning</h2>
+                                <p>Learning facilitated by technology that gives students some element of control over
+                                    time, place, path and pace.</p>
+                                <button class="btn btn-primary">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!-- Carousel End -->
     </header>
     <!-- Header Area End -->
     <!-- Main Area Start -->
