--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </nav>
         <!-- Navbar End -->
         <!-- Carousel Start -->
-        <section>
+        <section class="carousel">
             <div class="container">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
@@ -97,9 +97,109 @@
         <!-- Carousel End -->
     </header>
     <!-- Header Area End -->
+
     <!-- Main Area Start -->
-    <main></main>
+    <main>
+        <!-- Popular Courses Start -->
+        <section class="popular-clurses">
+            <div class="container mt-5">
+                <div class="heading text-center">
+                    <h2>Discover Our Popular Courses</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-12 col-lg-6 py-2">
+                        <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
+                            <div class="d-flex justify-content-center">
+                                <img class="w-100" src="images/course/course-1.png" alt="">
+                            </div>
+                            <div class="pt-3 pt-sm-0 px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example texton the card title and make up the bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 py-2">
+                        <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
+                            <div class="d-flex justify-content-center">
+                                <img class="w-100" src="images/course/course-1.png" alt="">
+                            </div>
+                            <div class="pt-3 pt-sm-0 px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example texton the card title and make up the bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 py-2">
+                        <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
+                            <div class="d-flex justify-content-center">
+                                <img class="w-100" src="images/course/course-1.png" alt="">
+                            </div>
+                            <div class="pt-3 pt-sm-0 px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example texton the card title and make up the bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 py-2">
+                        <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
+                            <div class="d-flex justify-content-center">
+                                <img class="w-100" src="images/course/course-1.png" alt="">
+                            </div>
+                            <div class="pt-3 pt-sm-0 px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example texton the card title and make up the bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 py-2">
+                        <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
+                            <div class="d-flex justify-content-center">
+                                <img class="w-100" src="images/course/course-1.png" alt="">
+                            </div>
+                            <div class="pt-3 pt-sm-0 px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example texton the card title and make up the bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 py-2">
+                        <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
+                            <div class="d-flex justify-content-center">
+                                <img class="w-100" src="images/course/course-1.png" alt="">
+                            </div>
+                            <div class="pt-3 pt-sm-0 px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example texton the card title and make up the bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center d-flex justify-content-center mt-3">
+                    <button class="btn btn-primary d-none d-lg-block">See More Courses</button>
+                    <button class="btn btn-primary d-block d-lg-none">View All</button>
+                </div>
+            </div>
+        </section>
+        <!-- Popular Courses End -->
+
+
+    </main>
     <!-- Main Area End -->
+
     <!-- Footer Area Start -->
     <footer></footer>
     <!-- Footer Area End -->
