--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link" href="#courses">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Deals</a>
+                            <a class="nav-link" href="#deals">Deals</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link">Success</a>
@@ -101,7 +101,7 @@
     <!-- Main Area Start -->
     <main>
         <!-- Popular Courses Start -->
-        <section class="popular-clurses">
+        <section id="courses">
             <div class="container mt-5">
                 <div class="heading text-center">
                     <h2>Discover Our Popular Courses</h2>
@@ -125,7 +125,7 @@
                     <div class="col-12 col-lg-6 py-2">
                         <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
                             <div class="d-flex justify-content-center">
-                                <img class="w-100" src="images/course/course-1.png" alt="">
+                                <img class="w-100" src="images/course/course-2.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
                                 <h5>Fundamental Of UI/UX Design</h5>
@@ -138,7 +138,7 @@
                     <div class="col-12 col-lg-6 py-2">
                         <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
                             <div class="d-flex justify-content-center">
-                                <img class="w-100" src="images/course/course-1.png" alt="">
+                                <img class="w-100" src="images/course/course-3.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
                                 <h5>Fundamental Of UI/UX Design</h5>
@@ -151,7 +151,7 @@
                     <div class="col-12 col-lg-6 py-2">
                         <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
                             <div class="d-flex justify-content-center">
-                                <img class="w-100" src="images/course/course-1.png" alt="">
+                                <img class="w-100" src="images/course/course-4.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
                                 <h5>Fundamental Of UI/UX Design</h5>
@@ -164,7 +164,7 @@
                     <div class="col-12 col-lg-6 py-2">
                         <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
                             <div class="d-flex justify-content-center">
-                                <img class="w-100" src="images/course/course-1.png" alt="">
+                                <img class="w-100" src="images/course/course-5.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
                                 <h5>Fundamental Of UI/UX Design</h5>
@@ -177,7 +177,7 @@
                     <div class="col-12 col-lg-6 py-2">
                         <div class="border rounded-2 d-sm-flex align-items-center flex-col-reverse">
                             <div class="d-flex justify-content-center">
-                                <img class="w-100" src="images/course/course-1.png" alt="">
+                                <img class="w-100" src="images/course/course-6.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
                                 <h5>Fundamental Of UI/UX Design</h5>
@@ -196,7 +196,41 @@
         </section>
         <!-- Popular Courses End -->
 
-
+        <!-- Explore Section Start -->
+        <section id="deals">
+            <div class="container my-5 rounded-2">
+                <div class="row bg-primary bg-opacity-10">
+                    <div class="col-12 col-sm-5 p-0 d-flex align-items-center">
+                        <img class="img-fluid" src="images/working.png" alt="">
+                    </div>
+                    <div class="col-12 col-sm-7 d-flex align-items-center py-2">
+                        <div class="mt-5 mt-sm-0 px-3">
+                            <h2>Explore The elearning Institute</h2>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised words... <span
+                                    class="text-primary">See More</span>
+                            </p>
+                            <div class="row">
+                                <div class="col-6 col-md-4">
+                                    <h2 class="fs-sm-5">3.2K+</h2>
+                                    <p>Online Course</p>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <h2>3.2K+</h2>
+                                    <p>Online Course</p>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <h2>3.2K+</h2>
+                                    <p>Online Course</p>
+                                </div>
+                            </div>
+                            <button class="btn btn-primary">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Explore Section End -->
     </main>
     <!-- Main Area End -->
 
