registration section done

--- a/index.html
+++ b/index.html
@@ -231,6 +231,22 @@
             </div>
         </section>
         <!-- Explore Section End -->
+
+        <!-- Registration Section Start -->
+        <section id="regiser">
+            <div
+                class="container text-center text-lg-start bg-primary d-block d-lg-flex align-items-center justify-content-between rounded-2 px-5 py-5">
+                <div class="text-light">
+                    <h2>Ready to join?</h2>
+                    <p>It is a long established fact that a reader will be distracted by the <br
+                            class="d-none d-lg-block"> readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="">
+                    <button class="btn text-primary bg-light">Register Now</button>
+                </div>
+            </div>
+        </section>
+        <!-- Registration Section End -->
     </main>
     <!-- Main Area End -->
 
