--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Register</a>
+                            <a class="nav-link" href="#register">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -233,9 +233,9 @@
         <!-- Explore Section End -->
 
         <!-- Registration Section Start -->
-        <section id="regiser">
+        <section id="register">
             <div
-                class="container text-center text-lg-start bg-primary d-block d-lg-flex align-items-center justify-content-between rounded-2 px-5 py-5">
+                class="container text-center text-lg-start bg-primary d-block d-lg-flex align-items-center justify-content-between rounded-2 px-5 py-5 my-5">
                 <div class="text-light">
                     <h2>Ready to join?</h2>
                     <p>It is a long established fact that a reader will be distracted by the <br
@@ -247,14 +247,36 @@
             </div>
         </section>
         <!-- Registration Section End -->
+
+        <!-- Registration Section End -->
+        <!-- Registration Section End -->
     </main>
     <!-- Main Area End -->
 
     <!-- Footer Area Start -->
-    <footer></footer>
+    <footer id="footer">
+        <div class="bg-dark text-light">
+            <div class="container text-center py-5">
+                <h3>Hero Edu</h3>
+                <p>Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman</p>
+                <p>Privacy Ploicy | Terms of use</p>
+                <div>
+                    <a class="px-1" target="-blank" href="https://facebook.com"><i
+                            class="fa fa-facebook rounded-5 bg-secondary bg-opacity-25 p-2 text-light"></i></a>
+                    <a class="px-1" target="-blank" href="https://twitter.com"><i
+                            class="fa fa-twitter rounded-5 bg-secondary bg-opacity-25 p-2 text-light"></i></a>
+                    <a class="px-1" target="-blank" href="https://linkedin.com"><i
+                            class="fa fa-linkedin rounded-5 bg-secondary bg-opacity-25 p-2 text-light"></i></a>
+                    <a class="px-1" target="-blank" href="https://instagram.com"><i
+                            class="fa fa-instagram rounded-5 bg-secondary bg-opacity-25 p-2 text-light"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Footer Area End -->
 
-
+    <!-- Link Font Awesome -->
+    <script src="https://kit.fontawesome.com/ce71f195fc.js" crossorigin="anonymous"></script>
     <!-- Link Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
