trusted companies section done

--- a/index.html
+++ b/index.html
@@ -248,8 +248,33 @@
         </section>
         <!-- Registration Section End -->
 
-        <!-- Registration Section End -->
-        <!-- Registration Section End -->
+        <!-- Sponsor Section Start -->
+        <section id="sponsor" class="d-none d-lg-block">
+            <div class="container my-5">
+                <h2 class="text-center">Trusted by over 800+ companies</h2>
+                <div class="row mt-3">
+                    <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex align-items-center"><img class="img-fluid m-2"
+                            src="images/company/company-1.png" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex align-items-center"><img class="img-fluid m-2"
+                            src="images/company/company-2.png" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex align-items-center"><img class="img-fluid m-2"
+                            src="images/company/company-3.png" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex align-items-center"><img class="img-fluid m-2"
+                            src="images/company/company-4.png" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex align-items-center"><img class="img-fluid m-2"
+                            src="images/company/company-5.png" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex align-items-center"><img class="img-fluid m-2"
+                            src="images/company/company-6.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Sponsor Section End -->
     </main>
     <!-- Main Area End -->
 
