successful students section done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="#deals">Deals</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Success</a>
+                            <a class="nav-link" href="#success">Success</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link">About</a>
@@ -247,6 +247,48 @@
             </div>
         </section>
         <!-- Registration Section End -->
+
+        <!-- Successfull Students Section Start -->
+        <section id="success">
+            <div class="container text-center text-md-start">
+                <div class="">
+                    <h2>Meet Our Successfull <br> Students</h2>
+                    <p>It is a long established fact that a reader will be distracted by the <br> readable content of a
+                        page when looking at its layout.</p>
+                </div>
+                <div class="row mt-5 mx-auto">
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <img class="img-fluid" src="images/student/student-1.png" alt="">
+                        <div class="p-2">
+                            <h5>Awlad Hossain</h5>
+                            <p>UIUX Designer</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <img class="img-fluid" src="images/student/student-2.png" alt="">
+                        <div class="p-2">
+                            <h5>Awlad Hossain</h5>
+                            <p>UIUX Designer</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <img class="img-fluid" src="images/student/student-3.png" alt="">
+                        <div class="p-2">
+                            <h5>Awlad Hossain</h5>
+                            <p>UIUX Designer</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <img class="img-fluid" src="images/student/student-4.png" alt="">
+                        <div class="p-2">
+                            <h5>Awlad Hossain</h5>
+                            <p>UIUX Designer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Successfull Students Section End -->
 
         <!-- FAQ Section Start -->
         <section id="faq">
