--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Hero Edu: Digital Education</title>
     <!-- Link Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -17,7 +17,7 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg">
             <div class="container py-2">
-                <a class="navbar-brand fw-bold fs-3" href="#">Pro Edu</a>
+                <a class="navbar-brand fw-bold fs-3" href="#">Hero Edu</a>
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                         <li class="nav-item">
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#success">Success</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">About</a>
+                            <a class="nav-link" href="#faq">FAQ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#register">Register</a>
@@ -242,17 +242,61 @@
                             class="d-none d-lg-block"> readable content of a page when looking at its layout.</p>
                 </div>
                 <div class="">
-                    <button class="btn text-primary bg-light">Register Now</button>
+                    <!-- Button Register -->
+                    <button type="button" class="btn text-primary bg-light" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        Register Now
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Register Here</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="mb-3">
+                                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                                aria-describedby="emailHelp" required>
+                                            <div id="emailHelp" class="form-text">We'll never share your email with
+                                                anyone else.</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                                            <input type="password" class="form-control" id="exampleInputPassword1"
+                                                required>
+                                        </div>
+                                        <div class="mb-3 form-check">
+                                            <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
+                                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- Registration Section End -->
 
-        <!-- Successfull Students Section Start -->
+        <!-- Successful Students Section Start -->
         <section id="success">
             <div class="container text-center text-md-start">
                 <div class="">
-                    <h2>Meet Our Successfull <br> Students</h2>
+                    <h2>Meet Our Successful <br> Students</h2>
                     <p>It is a long established fact that a reader will be distracted by the <br> readable content of a
                         page when looking at its layout.</p>
                 </div>
@@ -288,7 +332,83 @@
                 </div>
             </div>
         </section>
-        <!-- Successfull Students Section End -->
+        <!-- Successful Students Section End -->
+
+        <!-- Students Feedback Section Start -->
+        <section id="feedback">
+            <div class="container my-5">
+                <div class="text-center">
+                    <h2>Some Students Feedback</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-12 col-lg-6 position-relative">
+                        <div class=" border rounded-2 p-4 my-2">
+                            <div class="d-flex justify-content-between">
+                                <img src="images/comma.png" alt="">
+                                <div class="icons text-warning">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half"></i>
+                                </div>
+                            </div>
+                            <p class="py-2">There are many variations of passages of Lorem Ipsum available, but the
+                                majority
+                                have
+                                suffered alteration in some form, by injected humour, or randomised words which don't
+                                look
+                                even slightly believable. If you are going to use a passage of Lorem.</p>
+                            <div class="d-flex align-items-center">
+                                <img class="img-fluid" src="images/student/student-5.png" alt="">
+                                <div class="ms-4">
+                                    <h5 class="my-auto">Awlad Hossain</h5>
+                                    <p class="my-auto">UI Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div
+                            class="left-arrow position-absolute top-50 start-0 p-2 bg-primary bg-opacity-10 text-primary border rounded-5 d-none d-lg-block">
+                            <i class="fa fa-arrow-left"></i>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 position-relative">
+                        <div class=" border rounded-2 p-4 my-2">
+                            <div class="d-flex justify-content-between">
+                                <img src="images/comma.png" alt="">
+                                <div class="icons text-warning">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half"></i>
+                                </div>
+                            </div>
+                            <p class="py-2">There are many variations of passages of Lorem Ipsum available, but the
+                                majority
+                                have
+                                suffered alteration in some form, by injected humour, or randomised words which don't
+                                look
+                                even slightly believable. If you are going to use a passage of Lorem.</p>
+                            <div class="d-flex align-items-center">
+                                <img class="img-fluid" src="images/student/student-6.png" alt="">
+                                <div class="ms-4">
+                                    <h5 class="my-auto">Awlad Hossain</h5>
+                                    <p class="my-auto">UI Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div
+                            class="right-arrow position-absolute top-50 end-0 p-2 bg-primary bg-opacity-75 text-light border rounded-5 d-none d-lg-block">
+                            <i class="fa fa-arrow-right"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Students Feedback Section End -->
 
         <!-- FAQ Section Start -->
         <section id="faq">
