--- a/index.html
+++ b/index.html
@@ -206,9 +206,10 @@
                     <div class="col-12 col-sm-7 d-flex align-items-center py-2">
                         <div class="mt-5 mt-sm-0 px-3">
                             <h2>Explore The elearning Institute</h2>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                suffered alteration in some form, by injected humour, or randomised words... <span
-                                    class="text-primary">See More</span>
+                            <p>Digital learning" is a learning method based on the use of new digital tools to enable
+                                learners to learn in a different way, whether it be face-to-face, distance learning
+                                (asynchronous or synchronous) or blended learning.... <span class="text-primary">See
+                                    More</span>
                             </p>
                             <div class="row">
                                 <div class="col-6 col-md-4">
@@ -355,12 +356,9 @@
                                     <i class="fa-solid fa-star-half"></i>
                                 </div>
                             </div>
-                            <p class="py-2">There are many variations of passages of Lorem Ipsum available, but the
-                                majority
-                                have
-                                suffered alteration in some form, by injected humour, or randomised words which don't
-                                look
-                                even slightly believable. If you are going to use a passage of Lorem.</p>
+                            <p class="py-2">Digital learning is any type of learning that is accompanied by technology
+                                or by instructional practice that makes effective use of technology. It encompasses the
+                                application of a wide spectrum of practices, including blended and virtual learning.</p>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid" src="images/student/student-5.png" alt="">
                                 <div class="ms-4">
@@ -386,12 +384,9 @@
                                     <i class="fa-solid fa-star-half"></i>
                                 </div>
                             </div>
-                            <p class="py-2">There are many variations of passages of Lorem Ipsum available, but the
-                                majority
-                                have
-                                suffered alteration in some form, by injected humour, or randomised words which don't
-                                look
-                                even slightly believable. If you are going to use a passage of Lorem.</p>
+                            <p class="py-2">Digital learning is any type of learning that is accompanied by technology
+                                or by instructional practice that makes effective use of technology. It encompasses the
+                                application of a wide spectrum of practices, including blended and virtual learning.</p>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid" src="images/student/student-6.png" alt="">
                                 <div class="ms-4">
