--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!-- Link Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -105,7 +104,8 @@
             <div class="container mt-5">
                 <div class="heading text-center">
                     <h2>Discover Our Popular Courses</h2>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                    <p>It is a long established fact that a reader will be distracted by the readable <br
+                            class="d-none d-lg-block"> content of a page
                         when looking at its layout.</p>
                 </div>
                 <div class="row mt-5">
@@ -115,10 +115,10 @@
                                 <img class="w-100" src="images/course/course-1.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
-                                <h5>Fundamental Of UI/UX Design</h5>
+                                <h5 class="py-3 py-sm-0">Fundamental Of UI/UX Design</h5>
                                 <p>Some quick example texton the card title and make up the bulk of the card.
                                 </p>
-                                <h6 class="text-primary">Price : 20$</h6>
+                                <h6 class="text-primary py-3 py-sm-0">Price : 20$</h6>
                             </div>
                         </div>
                     </div>
@@ -128,10 +128,10 @@
                                 <img class="w-100" src="images/course/course-2.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
-                                <h5>Fundamental Of UI/UX Design</h5>
+                                <h5 class="py-3 py-sm-0">Javascript Basic to advanced</h5>
                                 <p>Some quick example texton the card title and make up the bulk of the card.
                                 </p>
-                                <h6 class="text-primary">Price : 20$</h6>
+                                <h6 class="text-primary py-3 py-sm-0">Price : 20$</h6>
                             </div>
                         </div>
                     </div>
@@ -141,10 +141,10 @@
                                 <img class="w-100" src="images/course/course-3.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
-                                <h5>Fundamental Of UI/UX Design</h5>
+                                <h5 class="py-3 py-sm-0">Fullstack Web Development</h5>
                                 <p>Some quick example texton the card title and make up the bulk of the card.
                                 </p>
-                                <h6 class="text-primary">Price : 20$</h6>
+                                <h6 class="text-primary py-3 py-sm-0">Price : 20$</h6>
                             </div>
                         </div>
                     </div>
@@ -154,10 +154,10 @@
                                 <img class="w-100" src="images/course/course-4.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
-                                <h5>Fundamental Of UI/UX Design</h5>
+                                <h5 class="py-3 py-sm-0">Digital Marketing</h5>
                                 <p>Some quick example texton the card title and make up the bulk of the card.
                                 </p>
-                                <h6 class="text-primary">Price : 20$</h6>
+                                <h6 class="text-primary py-3 py-sm-0">Price : 20$</h6>
                             </div>
                         </div>
                     </div>
@@ -167,10 +167,10 @@
                                 <img class="w-100" src="images/course/course-5.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
-                                <h5>Fundamental Of UI/UX Design</h5>
+                                <h5 class="py-3 py-sm-0">Photography Basic Rules</h5>
                                 <p>Some quick example texton the card title and make up the bulk of the card.
                                 </p>
-                                <h6 class="text-primary">Price : 20$</h6>
+                                <h6 class="text-primary py-3 py-sm-0">Price : 20$</h6>
                             </div>
                         </div>
                     </div>
@@ -180,10 +180,10 @@
                                 <img class="w-100" src="images/course/course-6.png" alt="">
                             </div>
                             <div class="pt-3 pt-sm-0 px-3">
-                                <h5>Fundamental Of UI/UX Design</h5>
+                                <h5 class="py-3 py-sm-0">Motion Graphics</h5>
                                 <p>Some quick example texton the card title and make up the bulk of the card.
                                 </p>
-                                <h6 class="text-primary">Price : 20$</h6>
+                                <h6 class="text-primary py-3 py-sm-0">Price : 20$</h6>
                             </div>
                         </div>
                     </div>
